--- a/download.html
+++ b/download.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download RacketRank | iOS & Android</title>
+    <link rel="icon" href="assets/applogo.png" type="image/png">
     <meta name="description"
         content="Download RacketRank for iOS and Android. Start tracking your progress and connecting with players today.">
 
