--- a/features.html
+++ b/features.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features | RacketRank</title>
+    <link rel="icon" href="assets/applogo.png" type="image/png">
     <meta name="description"
         content="Discover all the powerful features that make RacketRank the ultimate platform for racket sports enthusiasts.">
 
