--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RacketRank | Elevate Your Game</title>
+    <link rel="icon" href="assets/applogo.png" type="image/png">
     <meta name="description"
         content="The ultimate platform for racket sports enthusiasts. Track rankings, find matches, and join the global community.">
 
