--- a/pricing.html
+++ b/pricing.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing | RacketRank</title>
+    <link rel="icon" href="assets/applogo.png" type="image/png">
     <meta name="description" content="Simple, transparent pricing for RacketRank. Choose the plan that works for you.">
 
     <!-- Fonts -->
