--- a/rankings.html
+++ b/rankings.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rankings | RacketRank</title>
+    <link rel="icon" href="assets/applogo.png" type="image/png">
     <meta name="description" content="View global country rankings. See where you stand among players in your country.">
 
     <!-- Fonts -->
