rankings konum ve cache

--- a/rankings.html
+++ b/rankings.html
@@ -393,6 +393,8 @@
         </div>
     </footer>
 
+    <script src="prefetch-rankings.js" defer></script>
+
     <!-- Backend API Configuration -->
     <script>
         // Auto-detect API URL based on environment
