--- a/download.html
+++ b/download.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class="hero-image" style="display: flex; justify-content: center; align-items: center;">
                     <img src="assets/phone.png" alt="RacketRank App Logo"
-                        style="max-width: 300px; border: none; box-shadow: none; animation: float 6s ease-in-out infinite;">
+                        style="max-width: 300px; border: none; box-shadow: none;">
                 </div>
             </div>
         </div>
