--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="hero-image" style="display: flex; justify-content: center; align-items: center;">
                     <img src="assets/phone.png" alt="RacketRank App"
-                        style="max-width: 300px; border: none; box-shadow: none; animation: float 6s ease-in-out infinite;">
+                        style="max-width: 300px; border: none; box-shadow: none;">
                 </div>
             </div>
         </div>
